k8s/local-k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # removes path appendix (/api):
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # connects to issuer (https-service):
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # # redirects incomming trafic to https connection
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  # # tls section connects to dns
  # tls:
  #   - hosts:
  #       - sabbas.de
  #       - www.sabbas.de
  #     # secret created by certificate object
  #     secretName: sabbas-de-tls
  rules:
    # - host: sabbas.de
    - http:
        paths:
          # - path: /?(.*)
          - path: /
            backend:
              serviceName: auth-gui-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: auth-api-cluster-ip-service
              servicePort: 3001
    # - host: www.sabbas.de
    # - http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: auth-gui-cluster-ip-service
    #           servicePort: 3000
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /api/
#             backend:
#               serviceName: sauth-api-cluster-ip-service
#               servicePort: 3000
#           - path: /
#             backend:
#               serviceName: auth-api-cluster-ip-service
#               servicePort: 3001

# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-myservice
#   annotations:
#     # use the shared ingress-nginx
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - path: /test
#       backend:
#         serviceName: auth-api-cluster-ip-service
#         servicePort: 3001
